--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,11 @@
 			</exclusions>
 		</dependency>
 
-		<!--<dependency>
+		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>23.0</version>
-		</dependency>-->
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
